--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "concurrently \"next dev\" \"tailwindcss --input src/styles/input.css --output src/styles/output.css --watch\"",
     "build": "next build",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "capture": "start-server-and-test \"next\" 3000 \"node -r @swc-node/register tools/capture.ts\""
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,17 @@
     "tailwindcss": "^3.2.3"
   },
   "devDependencies": {
+    "@swc-node/register": "^1.5.4",
+    "@swc/core": "^1.3.14",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "axios": "^1.1.3",
+    "concurrently": "^7.5.0",
+    "googleapis": "^109.0.1",
+    "prettier": "^2.7.1",
+    "puppeteer": "^19.2.2",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.8.4"
   }
 }
