--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
   "name": "banner",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "capture": "start-server-and-test \"pnpm dev\" 3000 \"node -r @swc-node/register tools/capture.ts\"",
-    "push": "node -r @swc-node/register tools/push.ts"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "capture": "start-server-and-test \"pnpm dev\" 5173 \"node tools/capture.js\"",
+    "push": "node tools/push.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@neoconfetti/svelte": "^1.0.0",
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "next",
+    "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.13",
     "google-auth-library": "^8.7.0",
     "google-offline-access": "^0.0.0",
-    "next": "^13.0.3",
-    "postcss": "^8.4.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.3"
-  },
-  "devDependencies": {
-    "@swc-node/register": "^1.5.4",
-    "@swc/core": "^1.3.14",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "axios": "^1.1.3",
-    "concurrently": "^7.5.0",
     "googleapis": "^109.0.1",
-    "prettier": "^2.7.1",
+    "postcss": "^8.4.19",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
     "puppeteer": "^19.2.2",
     "start-server-and-test": "^1.14.0",
-    "typescript": "^4.8.4"
+    "svelte": "^3.46.0",
+    "svelte-check": "^2.7.1",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.2.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.1.0"
   }
 }
