--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check .",
     "format": "prettier --plugin-search-dir . --write .",
-    "capture": "start-server-and-test \"pnpm dev\" 5173 \"node tools/capture.js\"",
+    "capture": "start-server-and-test \"vite dev\" 5173 \"node tools/capture.js\"",
     "push": "node tools/push.js"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.7",
     "autoprefixer": "^10.4.13",
     "google-auth-library": "^8.7.0",
     "google-offline-access": "^0.0.0",
     "googleapis": "^109.0.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "puppeteer": "^19.2.2",
-    "start-server-and-test": "^1.14.0",
-    "svelte": "^3.46.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.7",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-svelte": "^2.9.0",
+    "puppeteer": "^19.4.1",
+    "start-server-and-test": "^1.15.2",
+    "svelte": "^3.55.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.0"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4"
   }
 }
